--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "server": "yarn json-server -d 750 -w -H 192.168.0.53 -p 3333 src/api/server.js"
   },
   "dependencies": {
     "expo": "~46.0.7",
@@ -18,7 +19,11 @@
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "json-server": "^0.17.0",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
